add 409 ConflictError response to api docs (#816)
